I corrected the alignment of h2 in every section and the line height of the paragraphs for better legibility. In description section, didnt requires changes

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ h3 {
 p {
   font-family: var(--fontFamilySecondary);
   font-size: 1.5rem;
+  line-height: 1.7;
 }
 a {
   font-size: 1.5rem;
@@ -53,9 +54,9 @@ footer section:nth-child(1),
 footer section:nth-child(3) {
   margin: 50px 0 0 0;
 }
-header,
 h2:not(footer h2) {
   border-bottom: 4px solid var(--backgroundSecondary);
+  text-align: center;
 }
 footer section:nth-child(3) {
   border-top: 4px solid var(--backgroundSecondary);
@@ -65,6 +66,7 @@ footer nav {
   padding: 40px;
 }
 .sectionBasicStyle {
+  margin-top: 50px;
   padding: 40px;
   background-color: var(--backgroundSecondary);
 }
